--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         </div>
     </div>
 
+    <footer>
+        
+    </footer>
+
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
