--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <ul>
           <li><a href="#">Inicio</a></li>
-          <li><a href="#extrenos">Extrenos</a></li>
+          <li><a href="#estrenos">Estrenos</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
@@ -47,6 +47,7 @@
         </div>
       </section>
 
+
       <section id="contacto">
         <form id="contact-form">
           <h3 class="titulo">Contacto</h3>
@@ -59,10 +60,17 @@
           <button type="submit">Enviar</button>
         </form>
       </section>
+
+
+
     </main>
+
+
+
     <footer class="bd-footer py-5 mt-5 bg-light">
         <div class="container py-5">
-          <div class="row">
+          <div class="row footer-align">
+
             <div class="col-6 col-lg-2 offset-lg-1 mb-3">
               <h4>Programacion</h4>
               <hr>
@@ -91,7 +99,9 @@
                 <li class="mb-2"><a href="#"">Publicidad en cines</a></li>
               </ul>
             </div>
-            <div c  lass="col-6 col-lg-2 mb-3">
+
+
+            <div class="col-6 col-lg-2 mb-3">
               <h4>CONTACTO</h4>
               <hr>
               <ul class="list-unstyled">
@@ -101,10 +111,14 @@
                 <li class="mb-2"><a href="#">Trabaja con nosotros</a></li>
                 <li class="mb-2"><a href="#">Reimprimir boletas electronicas</a></li>
                 <li class="mb-2"><a href="#">Politicas de cambio o devoluciones</a></li>
-            </ul>
+              </ul>
             </div>
+            
           </div>
         </div>
     </footer>
+
+
+
  </body>
 </html>
