--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Movies</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -24,7 +25,7 @@
     </header>
 
     <main>
-      <section id="extrenos">
+      <section id="estrenos">
         <div>
           <h2 class="titulo">Proximos extrenos</h2>
           <div class="image-gallery">
@@ -57,7 +58,8 @@
           <label for="message">Mensaje:</label>
           <textarea id="message" name="message" required></textarea>
 
-          <button type="submit">Enviar</button>
+          <button type="button" id="submit-button">Enviar</button>
+
         </form>
       </section>
 
