--- a/index.html
+++ b/index.html
@@ -25,10 +25,33 @@
     </header>
 
     <main>
+
+      <section class="hero">
+          <div class="hero-text">
+            <h1 class="hero-titulo">CinemaFilms</h1>
+            <span class="subtitulo">Las mejores peliculas y estrenos que buscas con la mejor experiencia inmersiva 4D</span>
+          </div>
+      </section>
+
       <section id="estrenos">
         <div>
           <h2 class="titulo">Proximos extrenos</h2>
           <div class="image-gallery">
+            <div class="movie-card">
+              <span class="title">ESTRENO</span>
+              <img src="https://i.ebayimg.com/images/g/~lAAAOSwNH9mKz75/s-l1200.webp" alt="Imagen 1" />
+              <span class="title">VER HORARIOS</span>
+            </div>
+            <div class="movie-card">
+              <span class="title">ESTRENO</span>
+              <img src="https://m.media-amazon.com/images/I/714xn6rxXSL.jpg" alt="Imagen 1" />
+              <span class="title">VER HORARIOS</span>
+            </div>
+            <div class="movie-card">
+              <span class="title">ESTRENO</span>
+              <img src="https://m.media-amazon.com/images/I/61CRq2R6i4L._AC_SL1024_.jpg" alt="Imagen 1" />
+              <span class="title">VER HORARIOS</span>
+            </div>
             <div class="movie-card">
               <span class="title">ESTRENO</span>
               <img src="https://i.ebayimg.com/images/g/~lAAAOSwNH9mKz75/s-l1200.webp" alt="Imagen 1" />
