--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Movies</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -25,17 +29,16 @@
     </header>
 
     <main>
-
       <section class="hero">
-          <div class="hero-text">
-            <h1 class="hero-titulo">CinemaFilms</h1>
-            <span class="subtitulo">Las mejores peliculas y estrenos que buscas con la mejor experiencia inmersiva 4D</span>
-          </div>
+        <div class="hero-text">
+          <h1 class="hero-titulo">CinemaFilms</h1>
+          <span class="subtitulo">Las mejores peliculas y estrenos que buscas con la mejor experiencia inmersiva 4D</span>
+        </div>
       </section>
 
       <section id="estrenos">
         <div>
-          <h2 class="titulo">Proximos extrenos</h2>
+          <h2 class="titulo">Proximos estrenos</h2>
           <div class="image-gallery">
             <div class="movie-card">
               <span class="title">ESTRENO</span>
@@ -71,7 +74,6 @@
         </div>
       </section>
 
-
       <section id="contacto">
         <form id="contact-form">
           <h3 class="titulo">Contacto</h3>
@@ -81,69 +83,60 @@
           <label for="message">Mensaje:</label>
           <textarea id="message" name="message" required></textarea>
 
-          <button type="button" id="submit-button">Enviar</button>
-
+          <button type="submit" id="submit-button">Enviar</button>
         </form>
       </section>
-
-
-
     </main>
 
-
-
     <footer class="bd-footer py-5 mt-5 bg-light">
-        <div class="container py-5">
-          <div class="row footer-align">
+      <div class="container py-5">
+        <div class="row footer-align">
+          <div class="col-6 col-lg-2 offset-lg-1 mb-3">
+            <h4>Programacion</h4>
+            <hr />
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="/">Cartelera</a></li>
+              <li class="mb-2"><a href="/docs/5.0/">Proximamente</a></li>
+              <li class="mb-2"><a href="/docs/5.0/examples/">Venta anticipada</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2 mb-3">
+            <h4>SOBRE CinemaFilms</h4>
+            <hr />
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="#">NOSOTROS</a></li>
+              <li class="mb-2"><a href="#">Salas y formatos</a></li>
+              <li class="mb-2"><a href="#">Terminos y condiciones</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-lg-2 mb-3">
+            <h4>OTROS SERVICIOS</h4>
+            <hr />
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="#">Cumpleaños</a></li>
+              <li class="mb-2"><a href="#">Eventos especiales</a></li>
+              <li class="mb-2"><a href="#">Entradas corporativas</a></li>
+              <li class="mb-2"><a href="#">Publicidad en cines</a></li>
+            </ul>
+          </div>
 
-            <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-              <h4>Programacion</h4>
-              <hr>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a href="/">Cartelera</a></li>
-                <li class="mb-2"><a href="/docs/5.0/">Proximamente</a></li>
-                <li class="mb-2"><a href="/docs/5.0/examples/">Venta anticipada</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-lg-2 mb-3">
-              <h4>SOBRE CinemaFilms</h4>
-              <hr>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a href="#">NOSOTROS</a></li>
-                <li class="mb-2"><a href="#">Salas y formatos</a></li>
-                <li class="mb-2"><a href="#">Terminos y condiciones</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-lg-2 mb-3">
-              <h4>OTROS SERVICIOS</h4>
-              <hr>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a href="#">Cumpleaños</a></li>
-                <li class="mb-2"><a href="#"">Eventos especiales</a></li>
-                <li class="mb-2"><a href="#">Entradas corporativas</a></li>
-                <li class="mb-2"><a href="#"">Publicidad en cines</a></li>
-              </ul>
-            </div>
-
-
-            <div class="col-6 col-lg-2 mb-3">
-              <h4>CONTACTO</h4>
-              <hr>
-              <ul class="list-unstyled">
-                <li class="mb-2"><a href="#">Preguntas Frecuentes CinemaFilms</a></li>
-                <li class="mb-2"><a href="#">Preguntas Frecuentes Muvi club</a></li>
-                <li class="mb-2"><a href="#">Escribenos</a></li>
-                <li class="mb-2"><a href="#">Trabaja con nosotros</a></li>
-                <li class="mb-2"><a href="#">Reimprimir boletas electronicas</a></li>
-                <li class="mb-2"><a href="#">Politicas de cambio o devoluciones</a></li>
-              </ul>
-            </div>
-            
+          <div class="col-6 col-lg-2 mb-3">
+            <h4>CONTACTO</h4>
+            <hr />
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="#">Preguntas Frecuentes CinemaFilms</a></li>
+              <li class="mb-2"><a href="#">Preguntas Frecuentes Muvi club</a></li>
+              <li class="mb-2"><a href="#">Escribenos</a></li>
+              <li class="mb-2"><a href="#">Trabaja con nosotros</a></li>
+              <li class="mb-2"><a href="#">Reimprimir boletas electronicas</a></li>
+              <li class="mb-2"><a href="#">Politicas de cambio o devoluciones</a></li>
+            </ul>
           </div>
         </div>
+      </div>
     </footer>
-
-
-
- </body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
